--- a/index.html
+++ b/index.html
@@ -10,226 +10,222 @@
 <meta name="theme-color" content="#5cb377">
 
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Kalam:wght@300;400;700&display=swap');
-  
-  :root {
+@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Kalam:wght@300;400;700&display=swap');
+
+:root {
     --color-primary: #5cb377;
     --color-secondary: #ff6347;
     --color-background: #fdf6e3;
     --color-text: #2c3e50;
     --font-heading: 'Cabin Sketch', cursive;
     --font-body: 'Kalam', cursive;
-  }
+}
 
-  body {
+body {
     font-family: var(--font-body);
     display: flex;
-    flex-direction: column; 
-    padding: 30px;
-    background-color: var(--color-background); 
+    flex-direction: column;
+    padding: 20px;
+    background-color: var(--color-background);
     color: var(--color-text);
     min-height: 100vh;
-  }
+    gap: 20px;
+}
 
-  @media (min-width: 768px) {
-    body { flex-direction: row; }
-  }
+/* Containers voor desktop */
+@media (min-width: 768px) {
+    body {
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 40px;
+    }
+}
 
-  h2 {
+h2 {
     font-family: var(--font-heading);
-    color: var(--color-secondary); 
+    color: var(--color-secondary);
     margin-top: 0;
     margin-bottom: 25px;
-    font-size: 2.5em;
+    font-size: 2.2em;
     text-shadow: 2px 2px 0px rgba(0,0,0,0.1);
     border-bottom: 3px dashed var(--color-primary);
     padding-bottom: 10px;
     position: relative;
-  }
+}
 
-  h2 img.logo-header {
+h2 img.logo-header {
     position: absolute;
     top: 0;
     right: 0;
-    width: 50px;
-    height: 50px;
-  }
+    width: 40px;
+    height: 40px;
+}
 
-  .controls {
+.controls, .shopping-list {
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 20px;
+    border: 3px solid var(--color-text);
+    box-shadow: 6px 6px 0px var(--color-primary);
+}
+
+/* Shopping list box-shadow fix voor mobile */
+@media (min-width: 768px) {
+    .shopping-list {
+        box-shadow: -8px 8px 0px var(--color-secondary);
+    }
+}
+
+.controls {
     flex: 1;
     max-width: 100%;
-    margin-right: 0;
-    margin-bottom: 40px; 
-    background: #ffffff; 
-    padding: 30px;
-    border-radius: 20px;
-    box-shadow: 8px 8px 0px var(--color-primary);
-    border: 3px solid var(--color-text);
-  }
+}
 
-  @media (min-width: 768px) {
-    .controls {
-      max-width: 400px;
-      margin-right: 40px;
-      margin-bottom: 0;
-    }
-  }
+.shopping-list {
+    flex: 2;
+    min-width: 250px;
+    position: relative;
+    overflow: hidden;
+}
 
-  label {
-    font-weight: 700; 
+label {
+    font-weight: 700;
     display: block;
     margin-top: 18px;
     margin-bottom: 8px;
     color: var(--color-text);
-    font-size: 1.1em;
-  }
+    font-size: 1.05em;
+}
 
-  input[type="text"], button {
+input[type="text"], button {
     font-family: var(--font-body);
     width: 100%;
     padding: 10px;
-    margin-bottom: 15px;
-    font-size: 1.1em;
+    margin-bottom: 12px;
+    font-size: 1em;
     border: 3px solid var(--color-text);
     border-radius: 10px;
     box-sizing: border-box;
     background-color: #fffaf0;
-  }
+}
 
-  input[type="text"]:focus {
-    border-color: var(--color-secondary); 
+input[type="text"]:focus {
+    border-color: var(--color-secondary);
     box-shadow: 3px 3px 0px var(--color-secondary);
     outline: none;
-  }
+}
 
-  button {
-    background-color: var(--color-primary); 
+button {
+    background-color: var(--color-primary);
     color: white;
     border: 3px solid var(--color-text);
     cursor: pointer;
     font-weight: bold;
     letter-spacing: 1px;
-    margin-top: 30px;
+    margin-top: 10px;
     box-shadow: 4px 4px 0px var(--color-text);
     transition: all 0.1s ease;
-  }
+}
 
-  button:hover {
-    background-color: #4ca067; 
+button:hover {
+    background-color: #4ca067;
     transform: translate(2px, 2px);
     box-shadow: 2px 2px 0px var(--color-text);
-  }
+}
 
-  .shopping-list {
-    flex: 2;
-    min-width: 250px;
-    background: #ffffff; 
-    padding: 30px;
-    border-radius: 20px; 
-    box-shadow: -8px 8px 0px var(--color-secondary);
-    border: 3px solid var(--color-text);
-    position: relative; 
-    overflow: hidden; 
-  }
+.shopping-list .section {
+    margin-bottom: 20px;
+    padding-bottom: 8px;
+    border-bottom: 2px dotted var(--color-primary);
+}
 
-  .shopping-list .section {
-    margin-bottom: 25px;
-    padding-bottom: 10px;
-    border-bottom: 2px dotted var(--color-primary); 
-  }
-
-  .shopping-list .section:last-child {
+.shopping-list .section:last-child {
     border-bottom: none;
-  }
+}
 
-  .shopping-list strong {
+.shopping-list strong {
     font-family: var(--font-heading);
-    font-size: 1.5em;
+    font-size: 1.3em;
     color: var(--color-primary);
-  }
+}
 
-  .shopping-list ul {
-    list-style: none; 
+.shopping-list ul {
+    list-style: none;
     padding: 0;
     margin: 10px 0 0 0;
-  }
+}
 
-  .shopping-list li {
-    padding: 8px 0;
-    border-bottom: 1px solid #eee; 
+.shopping-list li {
+    padding: 6px 0;
+    border-bottom: 1px solid #eee;
     margin-left: 10px;
     position: relative;
-  }
+}
 
-  .shopping-list li::before {
+.shopping-list li::before {
     content: '★';
     color: var(--color-secondary);
     font-size: 1em;
     position: absolute;
     left: -20px;
-  }
+}
 
-  .shopping-list-image {
-    position: absolute; 
+.shopping-list-image {
+    position: absolute;
     bottom: -15px;
     left: 50%;
     transform: translateX(-50%) rotate(-3deg);
-    width: 250px;
-    height: auto; 
+    width: 200px;
+    height: auto;
     opacity: 0.9;
     z-index: 1;
-    pointer-events: none; 
+    pointer-events: none;
     background: white;
     padding: 10px 10px 40px 10px;
     border: 1px solid #ccc;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
-  }
+}
 
-  .shopping-list #list, .shopping-list h2 {
-    position: relative;
-    z-index: 2; 
-  }
-
-  .check-item {
+.check-item {
     display: flex;
     align-items: center;
     gap: 10px;
     cursor: pointer;
-  }
+}
 
-  .item-checkbox {
+.item-checkbox {
     transform: scale(1.3);
     accent-color: var(--color-primary);
     cursor: pointer;
-  }
+}
 
-  .item-text {
+.item-text {
     transition: background-color 0.3s, color 0.3s;
     padding: 3px 6px;
     border-radius: 8px;
-  }
+}
 
-  .item-text.checked {
+.item-text.checked {
     background-color: #b4e0b4;
     color: #2c3e50;
     text-decoration: line-through;
-  }
+}
 
-  #export {
+#export {
     background-color: var(--color-secondary);
-    margin-top: 10px;
     width: auto;
     padding: 10px 20px;
     position: absolute;
-    right: 30px;
-    bottom: 30px;
+    right: 20px;
+    bottom: 20px;
     z-index: 3;
     display: none;
-  }
+}
 
-  #export:hover {
+#export:hover {
     background-color: #e04e3d;
-  }
+}
+
 </style>
 </head>
 <body>
@@ -254,7 +250,7 @@
 </div>
 
 <div class="shopping-list">
-  <h2>Boodschappenlijst! <img src="logo.png" alt="Logo" class="logo-header"></h2>
+  <h2>Boodschappenlijst! <img src="logo2.png" alt="Logo" class="logo-header"></h2>
   <div id="list"></div>
   <button id="export">📄 Exporteer boodschappenlijst</button>
   <img src="picture.jpg" alt="Decoratieve afbeelding" class="shopping-list-image">
@@ -369,7 +365,6 @@ days.forEach(day => {
   });
 });
 
-// Boodschappenlijst genereren
 document.getElementById("generate").addEventListener("click", () => {
   const selected = days.map(d => document.getElementById(d).value.trim() || "Geen");
   const aggregated = {};
@@ -414,7 +409,6 @@ document.getElementById("generate").addEventListener("click", () => {
   });
 });
 
-// Export .txt en wis vinkjes uit sessionStorage
 document.getElementById("export").addEventListener("click", () => {
   let output = "Boodschappenlijst (niet-afgevinkte items)\n\n";
   document.querySelectorAll(".section").forEach(sec => {
@@ -431,7 +425,6 @@ document.getElementById("export").addEventListener("click", () => {
   a.href = url; a.download = "boodschappenlijst.txt"; a.click();
   URL.revokeObjectURL(url);
 
-  // 🧹 Wis vinkstatus na export
   sessionStorage.clear();
 });
 </script>
