--- a/index.html
+++ b/index.html
@@ -68,12 +68,9 @@ h2 img.logo-header {
     box-shadow: 6px 6px 0px var(--color-primary);
 }
 
-@media (max-width: 767px) {
-    body {
-        padding-bottom: 300px;
-    }
+@media (min-width: 768px) {
     .shopping-list {
-        padding-bottom: 300px; /* extra ruimte voor afbeelding */
+        box-shadow: -8px 8px 0px var(--color-secondary);
     }
 }
 
